src-ken&y/objects/Means_of_Transport__c.object
<CustomObject>
    <customHelpPage>HelpMeansOfTransport</customHelpPage>
    <description>Stores the different means of transportation and their details.</description>
    <fields>
        <fullName>Code__c</fullName>
        <description>The unique code assigned to the means of transport to identify it distinctly.</description>
        <externalId>true</externalId>
        <inlineHelpText>The code uniquely identifies the selected means of transport.</inlineHelpText>
        <label>Code</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the means of transport.</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Maximum_Cube__c</fullName>
        <description>Maximum Cube of a truck</description>
        <inlineHelpText>Maximum cubic capacity (dimensions) for this means of transport.</inlineHelpText>
        <label>Maximum Cube</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maximum_Weight__c</fullName>
        <description>The maximum weight of the load that can be shipped using this means of transport.</description>
        <inlineHelpText>Maximum weight limit for this means of transport.</inlineHelpText>
        <label>Maximum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Means_of_Transport_Unique__c</fullName>
        <description>Unique key to prevent duplicate values for means of transport.</description>
        <externalId>true</externalId>
        <inlineHelpText>The vehicle used to move goods—for example, truck, train, ship.</inlineHelpText>
        <label>Means of Transport Unique</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Minimum_Cube__c</fullName>
        <description>Minimum Cube of the means of transport</description>
        <inlineHelpText>Minimum cubic capacity (dimensions) required by this means of transport.</inlineHelpText>
        <label>Minimum Cube</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Weight__c</fullName>
        <description>The minimum weight of the load required to ship in this means of transport.</description>
        <inlineHelpText>Minimum weight required by this means of transport.</inlineHelpText>
        <label>Minimum Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mode_of_Transport__c</fullName>
        <description>The mode (medium) through which the means of transport travels. Ex: Air, Water, Land etc,.</description>
        <inlineHelpText>Indicates how goods are transported. Options may include Road, Rail, Water, Air.</inlineHelpText>
        <label>Mode of Transport</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Land</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Rail</fullName>
                </value>
                <value>
                    <fullName>Water</fullName>
                </value>
                <value>
                    <fullName>Air</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Pallet_Positions_Floor_Spots__c</fullName>
        <inlineHelpText>Number of floor positions available for pallets.</inlineHelpText>
        <label>Pallet Positions(Floor Spots)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pallet_Positions_double_stacked__c</fullName>
        <inlineHelpText>Number of positions available  for pallets that can be double stacked.</inlineHelpText>
        <label>Pallet Positions(double stacked)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Means of Transport</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Minimum_Weight__c</columns>
        <columns>Maximum_Weight__c</columns>
        <columns>Minimum_Cube__c</columns>
        <columns>Maximum_Cube__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Means of Transport</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Means of Transport</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>